--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -35,8 +35,8 @@ jobs:
         git clone --depth=1 https://github.com/padavanonly/padavan-4.4.git /opt/rt-n56u
         #git clone --depth=1 https://github.com/padavanonly/padavan-4.4.git /opt/rt-n56u
         #git clone --depth=1 https://github.com/hwlon/Padavan.git /opt/rt-n56u
-        cd /opt/rt-n56u/toolchain-mipsel
-        sh dl_toolchain.sh
+        #cd /opt/rt-n56u/toolchain-mipsel
+        #sh dl_toolchain.sh
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
