--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -38,6 +38,29 @@ jobs:
         #cd /opt/rt-n56u/toolchain-mipsel
         #sh dl_toolchain.sh
         mkdir -p /opt/images/
+     - name: Prepare
+        run: |
+          sudo apt update
+          sudo apt install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd \
+            fakeroot kmod cpio git python3-docutils gettext automake autopoint \
+            texinfo build-essential help2man pkg-config zlib1g-dev libgmp3-dev \
+            libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget libc-dev-bin
+      - name: Build
+        run: |
+          make CT_TARGET=${{ matrix.target }}
+          cd crosstool-ng/toolchain-mipsel
+          tar cJf ../${{ matrix.target }}.tar.xz *
+        working-directory: toolchain
+      - uses: actions/upload-artifact@v3
+        with:
+          name: toolchain
+          path: toolchain/crosstool-ng/${{ matrix.target }}.tar.xz
+      - uses: svenstaro/upload-release-action@2.2.0
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: toolchain/crosstool-ng/${{ matrix.target }}.tar.xz
+          tag: toolchain
+          overwrite: true
     - name: Build Firmware
       env:
         #  CR660x  K2P_nano  K2P
