--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -32,28 +32,12 @@ jobs:
         pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget
     - name: Clone source code
       run: |
-        git clone --depth=1 https://github.com/padavanonly/padavan-4.4.git /opt/rt-n56u
         #git clone --depth=1 https://github.com/padavanonly/padavan-4.4.git /opt/rt-n56u
-        #git clone --depth=1 https://github.com/hwlon/Padavan.git /opt/rt-n56u
-        #cd /opt/rt-n56u/toolchain-mipsel
-        #sh dl_toolchain.sh
+        #git clone --depth=1 https://github.com/padavanonly/padavan-4.4.git /opt/rt-n56u
+        git clone --depth=1 https://github.com/hwlon/Padavan.git /opt/rt-n56u
+        cd /opt/rt-n56u/toolchain-mipsel
+        sh dl_toolchain.sh
         mkdir -p /opt/images/
-    - name: Build
-        run: |
-          make CT_TARGET=${{ matrix.target }}
-          cd crosstool-ng/toolchain-mipsel
-          tar cJf ../${{ matrix.target }}.tar.xz *
-        working-directory: toolchain
-      - uses: actions/upload-artifact@v3
-        with:
-          name: toolchain
-          path: toolchain/crosstool-ng/${{ matrix.target }}.tar.xz
-      - uses: svenstaro/upload-release-action@2.2.0
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: toolchain/crosstool-ng/${{ matrix.target }}.tar.xz
-          tag: toolchain
-          overwrite: true
     - name: Build Firmware
       env:
         #  CR660x  K2P_nano  K2P
