--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Build Firmware
       env:
         #  CR660x  K2P_nano  K2P
-        TNAME: CR660x
+        TNAME: K2P_nano
       run: |
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
